<resources>
    <string name="app_name">LoginModule</string>

    <string name="prompt_email">请输入邮箱</string>
    <string name="prompt_password">请输入密码</string>
    <string name="btn_login_in">登录</string>
    <string name="btn_skip_login">跳过</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">邮箱格式不正确</string>
    <string name="error_invalid_password">密码位数太短</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_field_required">必填项</string>

</resources>
